environments/production/observability/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    certResolver: letsencrypt
